--- a/src/index.css
+++ b/src/index.css
@@ -54,15 +54,18 @@ button {
   margin-top: 5px;
   font-size: 1.5em;
   text-align: center;
+  align-items: center;
   user-select: none;
   cursor: pointer;
   color: #2e2e2e;
   transition-duration: 0.2s;
 }
-button:hover {
+button:hover,
+.heuristic-dropdown:hover {
   box-shadow: 0 1px 3px 1px #2527294d, 0 4px 8px 3px #25272926;
 }
-button:active {
+button:active,
+.heuristic-dropdown:active {
   box-shadow: inset 0 1px 3px 1px #2527291d, 0 4px 8px 3px #25272986;
   transition-duration: 0.05s;
 }
@@ -72,13 +75,22 @@ button:active {
   width: 150px;
   height: 40px;
 }
-.toggle-button, .state-button-off {
+.icon-button {
+  height: 40px;
+}
+.toggle-button,
+.state-button-off,
+.icon-button,
+.heuristic-dropdown,
+.heuristic-dropdown .Dropdown-menu {
   background-color: #8585ff;
 }
-.toggle-button:hover, .state-button-off:hover {
+.toggle-button:hover,
+.state-button-off:hover,
+.icon-button:hover {
   background-color: #b8b8f6;
 }
-.toggle-button:active, .state-button-off:active {
+.toggle-button:active, .state-button-off:active, .icon-button:active {
   background-color: #b8b8f69e;
 }
 .state-button-on {
@@ -118,4 +130,58 @@ button:active {
 .console-error {
   color: red;
   background-color: #ffefef;
+}
+
+.heuristic-dropdown, .heuristic-dropdown .Dropdown-menu {
+  vertical-align:top;
+  padding: 7px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 200px;
+  font-family: Franklin Gothic Light;
+  font-size: 1.5em;
+  cursor: pointer;
+  text-align: center;
+  padding: 7px;
+  user-select: none;
+  color: #2e2e2e;
+}
+.heuristic-dropdown {
+  height: 40px;
+}
+.heuristic-dropdown .Dropdown-menu{
+  border-bottom: 3px solid #e5e2e0;
+  border-left: 3px solid #e5e2e0;
+  border-right: 3px solid #e5e2e0;
+  border-top: 3px solid #2e2e2e;
+  border-radius: 0px 0px 5px 5px;
+  position: relative;
+  left:-12px;
+  top:2px;
+  font-size: 1em;
+  margin-top: 0px;
+}
+.heuristic-dropdown .Dropdown-menu .Dropdown-option {
+  border-radius: 5px;
+  color: #2e2e2e;
+  transition-duration: 0.1s;
+  padding: 2px;
+}
+.heuristic-dropdown .Dropdown-menu .Dropdown-option:hover {
+  transform: scale(1.1, 1.1);
+  background-color: #b8b8f6;
+}
+.icon {
+  background-color: transparent;
+  color: #2e2e2e;
+  fill: #2e2e2e;
+  margin-top:1px;
+}
+.heuristic-dropdown:hover {
+  border-radius: 5px;
+  margin-bottom: 0px;
 }
